	* Bug with cursor handling (triggered for example by opening the tree window, the tree help and issuing the fill cache command)
	* Board auto resize while toggling game info display
	* Bug in "Calculation of variations" training (aka Stoyko exercise)
	* wrong assignments to ::CorrespondenceChess::num corrected
- FICS : user interface improvements : 
	* click on a game to observe it
	* redesign in notebook style
	* better looking "offers" graph
	* used icons from http://webdesignledger.com/freebies/21-best-icon-sets-for-designing-web-apps
	* added a check box to enable standard user variables
- Correspondence Chess:
	* Add confirmation dialogue of CC moves. (Suggested by Dhanish)
	* Add copy cc games list to clipboard. (Suggested by Dhanish)
	* Add Ctrl-Up/Down scrolling through games. (Suggested by Dhanish)
	* Ctrl-F12 now also processes the inbox automatically. (Suggested by Dhanish)
	* Check if mainline is longer then the games mainline, eg. due to a users error (Suggested by Dhanish)
	* Disable engine analysis in games that do not allow it,  ie. Xfcc noEngines = true. If noEngines is not set assume "engines allowed" (ICCF). (Suggested by Austin)
	* Strip of text in [] when sending game comments
	* Show start date for individual challenges in tooltip
- Spell checker : enhanced user feedback, operation can be cancelled, all names corrected instead of the first 2000 (thanks to Joost Hart)
- User interface:
	* blindfold play (piece set)
	* Add SAA/CUA hotkeys for clipboard (Ctrl-Ins, Shift-Ins)
- Translations:
	* hungarian updated (thanks to Szőts Gábor)
	* swedish updated (thanks to Hans Eriksson)
- Position search : added the possibility to search for current position in another opened base (this avoids the use of the Tree window that can also be used for this, but can be found less convenient).
- Game merging : it is now possible to merge directly a game from one base to the current game in another base (see context menu in Game list window)