@@ -4,6 +4,8 @@
 |                                                           |
  ===========================================================
 fignoler FICS et calvar
+bind SPACE ajoute coup
+l 247 de analysis.tcl
  ===========================================================
 |                                                           |
 |                          BUGS                             |
