@@ -1,7 +1,7 @@
 
 # files
 
-EXE = fruit
+EXE = togaII
 
 OBJS = attack.o board.o book.o eval.o fen.o hash.o list.o main.o material.o \
        move.o move_check.o move_do.o move_evasion.o move_gen.o move_legal.o \
@@ -14,7 +14,7 @@ OBJS = attack.o board.o book.o eval.o fen.o hash.o list.o main.o material.o \
 all: $(EXE) .depend
 
 clean:
-	$(RM) *.o .depend gmon.out fruit
+	$(RM) *.o .depend gmon.out fruit togaII
 
 # general
 
